WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260255
REGRESSION (
262875@main
): animation of `rotate` property doesn't work if there's a `scale`
https://bugs.webkit.org/show_bug.cgi?id=260255
Summary
REGRESSION (262875@main): animation of `rotate` property doesn't work if ther...
David Håsäther
Reported
2023-08-16 04:37:58 PDT
Created
attachment 467288
[details]
Animation bug See attached file. The two animations should look the same. They do in all common browsers, including Safari 16, but no rotation is happening in Safari 17.
Attachments
Animation bug
(595 bytes, text/html)
2023-08-16 04:37 PDT
,
David Håsäther
no flags
Details
Bug with filter
(644 bytes, text/html)
2023-08-16 06:00 PDT
,
David Håsäther
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
David Håsäther
Comment 1
2023-08-16 06:00:16 PDT
Created
attachment 467289
[details]
Bug with filter filter also disabled rotation, see new TC
Ahmad Saleem
Comment 2
2023-08-16 14:08:38 PDT
I am able to reproduce this bug on WebKit ToT (
266957@main
) as well and blurred does not flip like non-filtered text.
Radar WebKit Bug Importer
Comment 3
2023-08-16 18:14:33 PDT
<
rdar://problem/113999490
>
Simon Fraser (smfr)
Comment 4
2023-08-21 11:09:51 PDT
Regression range:
https://github.com/WebKit/WebKit/compare/a465a8a38ab52cfd57d2c2e710d72ea6f53d9c81...2160e724153a80c80fb6d42b05809ff14bcd930f
Antoine Quint
Comment 5
2023-10-16 06:48:56 PDT
The issue is that the animation here has two transform-related properties per keyframe: scale and rotate. In RenderLayerBacking::startAnimation() we call GraphicsLayerCA::addAnimation() twice as a result, once for scale and once for rotate, but in both cases we use the same animation name. Then in GraphicsLayerCA::createTransformAnimationsFromKeyframes() we will remove any animation with that same name which means only one of the two properties will end up being animated. We need to find a way to keep the notion that these GraphicsLayerCA animations were generated from the same KeyframeEffect but also have a way to distinguish such animations when adding and removing them.
Antoine Quint
Comment 6
2023-10-17 01:44:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19157
Antoine Quint
Comment 7
2023-10-17 01:46:21 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/42577
EWS
Comment 8
2023-10-18 00:24:37 PDT
Committed
269453@main
(add5da728e89): <
https://commits.webkit.org/269453@main
> Reviewed commits have been landed. Closing PR #19157 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug